[project]
name = "one-llm"
version = "0.1.0"
description = "A clean, minimalist library for using multiple LLM providers with structured outputs."
readme = "README.md"
authors = [{ name = "Will Rice", email = "wrice20@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "openai>=1.58.1",
  "pydantic>=2.12.2",
  "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0",
  "pre-commit>=4.1.0",
  "pydocstyle>=6.3.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.9.7",
]

[build-system]
requires = ["uv_build>=0.9.2"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["one"]

[tool.ruff.lint.isort]
known-first-party = ["one"]

[tool.ruff.lint]
select = ["C", "E", "F", "I", "W", "D", "N", "B", "PTH", "ANN"]
ignore = ["D107", "ANN401"]
exclude = [".venv"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
follow_imports_for_stubs = true
exclude = [".venv"]
