[project]
name = "one-llm-lib"
version = "0.1.0"
description = "A clean, minimalist library for using multiple LLM providers with structured outputs."
readme = "README.md"
authors = [{ name = "Will Rice", email = "wrice20@gmail.com" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = [
  "llm",
  "ai",
  "openai",
  "anthropic",
  "claude",
  "gpt",
  "pydantic",
  "structured-outputs",
  "type-safe",
  "api-wrapper",
  "machine-learning",
  "natural-language-processing",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "anthropic>=0.40.0",
  "openai>=1.58.1",
  "pydantic>=2.12.2",
  "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0",
  "pre-commit>=4.1.0",
  "pydocstyle>=6.3.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.9.7",
]

[build-system]
requires = ["uv_build>=0.9.2"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["one"]

[tool.ruff.lint.isort]
known-first-party = ["one"]

[tool.ruff.lint]
select = ["C", "E", "F", "I", "W", "D", "N", "B", "PTH", "ANN"]
ignore = ["D107", "ANN401"]
exclude = [".venv"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
follow_imports_for_stubs = true
exclude = [".venv"]
